--- a/public/index.html
+++ b/public/index.html
@@ -506,7 +506,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i> LostMedia<span>Arşiv</span></h1>
+                <h1><i class="fas fa-film"></i> Not Found<span> So Far</span></h1>
                 <p>Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
             </div>
             <nav>
