--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,10 @@
             color: var(--primary-color);
         }
 
+        .logo h1 spoohker {
+            color: var(--red-color);
+        }
+
         .logo p {
             font-size: 0.9rem;
             color: var(--gray-color);
@@ -506,7 +510,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i> Not Found<span> So Far</span></h1>
+                <h1><i class="fas fa-film"></i> Not Found<spoohker> So Far</spoohker></h1>
                 <p>Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
             </div>
             <nav>
