--- a/public/index.html
+++ b/public/index.html
@@ -706,7 +706,8 @@
                     <h4><i class="fas fa-envelope"></i> Bize Ulaşın</h4>
                     <p>lostmedia@ornekmail.com</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-x"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-discord"></i></a>
                         <a href="#"><i class="fab fa-reddit"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
