--- a/public/index.html
+++ b/public/index.html
@@ -708,7 +708,7 @@
                     <div class="social-links">
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-snapchat"></i></a>
+                        <a href="#"><i class="fab fa-square-snapchat"></i></a>
                         <a href="#"><i class="fab fa-discord"></i></a>
                         <a href="#"><i class="fab fa-reddit"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
