--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <meta name="description" content="A Lost Media Database">
 <meta name="keywords" content="HTML, CSS, JavaScript">
 <meta name="author" content="Kairas5361">
-    <title>Lost Media Arşivi | Kayıp Medya Koleksiyonu</title>
+    <title>Not Found So Far | Lost Media Collection</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Genel Stiller */
@@ -507,7 +507,7 @@
         <div class="container">
             <div class="logo">
                 <h1><i class="fas fa-film"></i> Not Found<span> So Far</span></h1>
-                <p>Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
+                <p>Archive of Lost, Forgotten and Rare Media Content</p>
             </div>
             <nav>
                 <ul>
@@ -518,7 +518,7 @@
                 </ul>
             </nav>
             <div class="search-bar">
-                <input type="text" placeholder="Medya ara...">
+                <input type="text" placeholder="Search Media...">
                 <button><i class="fas fa-search"></i></button>
             </div>
         </div>
@@ -541,13 +541,14 @@
                 <div class="filter-group">
                     <label for="category"><i class="fas fa-tags"></i> Kategori:</label>
                     <select id="category">
-                        <option value="all">Tüm Kategoriler</option>
-                        <option value="film">Filmler</option>
-                        <option value="tv">TV Şovları</option>
-                        <option value="commercial">Reklamlar</option>
-                        <option value="music">Müzik</option>
-                        <option value="game">Oyunlar</option>
-                        <option value="other">Diğer</option>
+                        <option value="all">All Categories</option>
+                        <option value="film">Movies</option>
+                        <option value="tv">TV Shows</option>
+                        <option value="commercial">Commercials</option>
+                        <option value="photography">Photographies</option>
+                        <option value="music">Musics</option>
+                        <option value="game">Games</option>
+                        <option value="other">Other</option>
                     </select>
                 </div>
                 <div class="filter-group">
