--- a/public/index.html
+++ b/public/index.html
@@ -717,7 +717,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 LostMediaArşiv. Tüm hakları saklıdır.</p>
+                <p>&copy; <script>var yıl = new Date().getFullYear(); document.write(yıl);</script> LostMediaArşiv. Tüm hakları saklıdır.</p>
                 <p>Bu site kâr amacı gütmemektedir.</p>
             </div>
         </div>
