--- a/public/index.html
+++ b/public/index.html
@@ -512,10 +512,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" class="active"><i class="fas fa-home"></i> Ana Sayfa</a></li>
-                    <li><a href="#"><i class="fas fa-list"></i> Kategoriler</a></li>
-                    <li><a href="#"><i class="fas fa-upload"></i> Gönderi Yap</a></li>
-                    <li><a href="#"><i class="fas fa-info-circle"></i> Hakkında</a></li>
+                    <li><a href="#" class="active"><i class="fas fa-home"></i> Main Page</a></li>
+                    <li><a href="#"><i class="fas fa-list"></i> Categories</a></li>
+                    <li><a href="#"><i class="fas fa-upload"></i> Make a Post</a></li>
+                    <li><a href="#"><i class="fas fa-info-circle"></i> About</a></li>
                 </ul>
             </nav>
             <div class="search-bar">
@@ -527,11 +527,11 @@
 
     <div class="hero">
         <div class="container">
-            <h2>Kaybolan Medya Parçalarını Keşfedin</h2>
-            <p>Binlerce kayıp film, dizi, reklam, müzik ve daha fazlası bu arşivde...</p>
+            <h2>Discover Disappearing Media Fragments</h2>
+            <p>Thousands of Lost Movies, TV Series, Commercials, Music and More in This Archive...</p>
             <div class="cta-buttons">
-                <a href="#" class="btn primary">Son Eklenenler</a>
-                <a href="#" class="btn secondary">Rastgele Keşfet</a>
+                <a href="#" class="btn primary">Last Added</a>
+                <a href="#" class="btn secondary">Random Explore</a>
             </div>
         </div>
     </div>
@@ -540,7 +540,7 @@
         <section class="filter-section">
             <div class="filter-options">
                 <div class="filter-group">
-                    <label for="category"><i class="fas fa-tags"></i> Kategori:</label>
+                    <label for="category"><i class="fas fa-tags"></i> Category:</label>
                     <select id="category">
                         <option value="all">All Categories</option>
                         <option value="film">Movies</option>
