--- a/public/index.html
+++ b/public/index.html
@@ -553,23 +553,23 @@
                     </select>
                 </div>
                 <div class="filter-group">
-                    <label for="status"><i class="fas fa-search"></i> Durum:</label>
+                    <label for="status"><i class="fas fa-search"></i> Situation:</label>
                     <select id="status">
-                        <option value="all">Tüm Durumlar</option>
-                        <option value="found">Bulunanlar</option>
-                        <option value="lost">Kayıp</option>
-                        <option value="partially">Kısmen Bulunan</option>
+                        <option value="all">All Situations</option>
+                        <option value="found">Found</option>
+                        <option value="lost">Lost</option>
+                        <option value="partially">Partially Found</option>
                     </select>
                 </div>
                 <div class="filter-group">
-                    <label for="year"><i class="fas fa-calendar"></i> Yıl:</label>
+                    <label for="year"><i class="fas fa-calendar"></i> Year:</label>
                     <select id="year">
                         <option value="all">Tüm Yıllar</option>
-                        <option value="pre-1980">1980 Öncesi</option>
+                        <option value="pre-1980">Before 1980</option>
                         <option value="1980-1990">1980-1990</option>
                         <option value="1990-2000">1990-2000</option>
                         <option value="2000-2010">2000-2010</option>
-                        <option value="post-2010">2010 Sonrası</option>
+                        <option value="post-2010">After2010</option>
                     </select>
                 </div>
                 <button class="btn apply-filters"><i class="fas fa-filter"></i> Filtrele</button>
@@ -577,12 +577,12 @@
         </section>
 
         <section class="media-grid">
-            <h3><i class="fas fa-fire"></i> Popüler Kayıp Medyalar</h3>
+            <h3><i class="fas fa-fire"></i> Popular Lost Medias</h3>
             <div class="grid-container">
                 <div class="media-card">
                     <div class="media-thumbnail">
                         <img src="https://via.placeholder.com/300x200?text=Kayıp+Film" alt="Kayıp Film">
-                        <span class="status found">Bulundu</span>
+                        <span class="status found">Found</span>
                     </div>
                     <div class="media-info">
                         <h4>Kayıp 1980'ler Filmi</h4>
