--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <meta name="keywords" content="HTML, CSS, JavaScript">
 <meta name="author" content="Kairas5361">
     <title>Not Found So Far | Lost Media Collection</title>
+    <link rel="icon" href="images/Not Found So Far.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
