--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
             <div class="grid-container">
                 <div class="media-card">
                     <div class="media-thumbnail">
-                        <img src="https://via.placeholder.com/300x200?text=Kayıp+Film" alt="Kayıp Film">
+                        <img src="https://i.hizliresim.com/7irizmp.png" alt="Kayıp Film">
                         <span class="status found" data-i18n="found">Bulundu</span>
                     </div>
                     <div class="media-info">
