--- a/public/categories.html
+++ b/public/categories.html
@@ -16,8 +16,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
-                    <li><a href="#" class="active" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
+                    <li><a href="index.html" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
+                    <li><a href="categories.html" class="active" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
                     <li><a href="#" data-i18n="submit"><i class="fas fa-upload"></i> <span>Gönderi Yap</span></a></li>
                     <li><a href="#" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
                 </ul>
