--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i> <span id="site-title">LostMediaArşiv</span></h1>
-                <p id="site-subtitle">Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
+                <h1><i class="fas fa-film"></i> Not Found<span id="site-title"> So Far</span></h1>
+                <p id="site-subtitle">Kaybolan, Unutulan ve Nadir Medya İçeriklerinin Arşivi..</p>
             </div>
             <nav>
                 <ul>
