--- a/public/categories.html
+++ b/public/categories.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Lost Media Arşivi | Kayıp Medya Koleksiyonu</title>
+    <link rel="icon" href="images/Not Found So Far Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="categories/styles.css">
 </head>
@@ -11,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i> <span id="site-title">LostMediaArşiv</span></h1>
+                <h1><i class="fas fa-film"></i>Not Found <span id="site-title">So Far</span></h1>
                 <p id="site-subtitle">Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
             </div>
             <nav>
