--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <meta content="A Lost Media Database" property="og:description"/>
 <meta content="https://embed.com/this-is-the-site-url" property="og:url"/>
 <meta content="https://i.hizliresim.com/gjyxp6i.jpg" property="og:image"/>
-<meta content="#328336" data-react-helmet="true" name="theme-color"/>
+<meta content="#d93232" data-react-helmet="true" name="theme-color"/>
 <meta name="description" content="A Lost Media Database">
 <meta name="keywords" content="HTML, CSS, JavaScript">
 <meta name="author" content="Kairas5361">
