--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Hakkında | Lost Media Arşivi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="about/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -217,6 +217,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="about/script.js"></script>
 </body>
 </html>
