--- a/public/about.html
+++ b/public/about.html
@@ -67,35 +67,16 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-image">
-                        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Ayşe Kaya">
+                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Kairas">
                     </div>
-                    <h3>Ayşe Kaya</h3>
-                    <p class="position">Kurucu & Arşiv Uzmanı</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-                <div class="team-card">
-                    <div class="team-image">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Mehmet Demir">
-                    </div>
-                    <h3>Mehmet Demir</h3>
-                    <p class="position">Teknoloji Direktörü</p>
+                    <h3>Kairas</h3>
+                    <p class="position">Admin, Moderatör</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-discord"></i></a>
-                    </div>
-                </div>
-                <div class="team-card">
-                    <div class="team-image">
-                        <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Elif Batur">
-                    </div>
-                    <h3>Elif Batur</h3>
-                    <p class="position">Araştırmacı</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fas fa-globe"></i></a>
                         <a href="#"><i class="fab fa-reddit"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-steam"></i></a>
+                        <a href="#"><i class="fab fa-discord"></i></a>
                     </div>
                 </div>
             </div>
