--- a/public/about.html
+++ b/public/about.html
@@ -19,6 +19,7 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa</a></li>
                     <li><a href="categories.html"><i class="fas fa-list"></i> Kategoriler</a></li>
+                    <li><a href="#" data-i18n="submit"><i class="fas fa-upload"></i><span> Gönderi Yap</span></a></li>
                     <li><a href="about.html" class="active"><i class="fas fa-info-circle"></i> Hakkında</a></li>
                 </ul>
             </nav>
