--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,6 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa</a></li>
                     <li><a href="categories.html"><i class="fas fa-list"></i> Kategoriler</a></li>
-                    <li><a href="#" data-i18n="submit"><i class="fas fa-upload"></i><span> Gönderi Yap</span></a></li>
                     <li><a href="about.html" class="active"><i class="fas fa-info-circle"></i> Hakkında</a></li>
                 </ul>
             </nav>
@@ -74,10 +73,10 @@
                     <h3>Kairas</h3>
                     <p class="position">Admin, Moderatör</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-reddit"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-steam"></i></a>
+                        <a href="https://github.com/Kairas5361"><i class="fab fa-github"></i></a>
+                        <a href="https://reddit.com/u/Kairas5361"><i class="fab fa-reddit"></i></a>
+                        <a href="https://x.com/Kairas5361"><i class="fab fa-twitter"></i></a>
+                        <a href="https://steamcommunity.com/profiles/76561199179702467/"><i class="fab fa-steam"></i></a>
                         <a href="#"><i class="fab fa-discord"></i></a>
                     </div>
                 </div>
