--- a/public/about.html
+++ b/public/about.html
@@ -68,7 +68,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-image">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Kairas">
+                        <img src="images/Kairas Dude.png" alt="Kairas">
                     </div>
                     <h3>Kairas</h3>
                     <p class="position">Admin, Moderatör</p>
