--- a/public/categories.html
+++ b/public/categories.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Kategoriler | Lost Media Arşivi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="categories/styles.css">
 </head>
 <body>
     <!-- Header -->
@@ -219,6 +219,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="categories/script.js"></script>
 </body>
 </html>
