--- a/public/about.html
+++ b/public/about.html
@@ -53,7 +53,7 @@
                     </ul>
                 </div>
                 <div class="mission-image">
-                    <img src="https://images.unsplash.com/photo-1587202372775-e229f172b9ce?ixlib=rb-4.0.3" alt="Arşiv Çalışmaları">
+                    <img src="https://i.hizliresim.com/kjqvlmq.png" alt="Arşiv Çalışmaları">
                 </div>
             </div>
         </div>
