--- a/public/categories.html
+++ b/public/categories.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="stat-info">
                         <h4 data-i18n="found-media">Bulunan Medya</h4>
-                        <p class="count">4,892</p>
+                        <p class="count">0 (Not Yet)</p>
                     </div>
                 </div>
                 <div class="stat-card">
@@ -168,7 +168,7 @@
                     </div>
                     <div class="stat-info">
                         <h4 data-i18n="lost-media">Kayıp Medya</h4>
-                        <p class="count">3,156</p>
+                        <p class="count">0 (Not Yet)</p>
                     </div>
                 </div>
                 <div class="stat-card">
@@ -177,7 +177,7 @@
                     </div>
                     <div class="stat-info">
                         <h4 data-i18n="partially-found">Kısmen Bulunan</h4>
-                        <p class="count">1,847</p>
+                        <p class="count">0 (Not Yet)</p>
                     </div>
                 </div>
             </div>
