--- a/public/categories.html
+++ b/public/categories.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="page-title">Kategoriler | Lost Media Arşivi</title>
+    <title id="page-title">Not Found So Far | Kategoriler</title>
+    <link rel="icon" href="images/Not Found So Far Icon.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="categories/styles.css">
 </head>
