--- a/public/about.html
+++ b/public/about.html
@@ -84,6 +84,7 @@
                         <a href="https://github.com/Kairas5361"><i class="fab fa-github"></i></a>
                         <a href="https://reddit.com/u/Kairas5361"><i class="fab fa-reddit"></i></a>
                         <a href="https://x.com/Kairas5361"><i class="fab fa-twitter"></i></a>
+                        <a href="https://guns.lol/kairas"><i class="fa-solid fa-gun fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i></a>
                         <a href="https://steamcommunity.com/profiles/76561199179702467/"><i class="fab fa-steam"></i></a>
                         <a href="#"><i class="fab fa-discord"></i></a>
                     </div>
