--- a/public/categories.html
+++ b/public/categories.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i> <span id="site-title">LostMediaArşiv</span></h1>
+                <h1><i class="fas fa-film"></i>Not Found <span id="site-title"></span></h1>
                 <p id="site-subtitle">Kaybolan, unutulan ve nadir medya içeriklerinin arşivi</p>
             </div>
             <nav>
