--- a/public/about.html
+++ b/public/about.html
@@ -79,7 +79,7 @@
                         <img src="images/Kairas Dude.png" alt="Kairas">
                     </div>
                     <h3>Kairas</h3>
-                    <p class="position">Admin, Moderatör</p>
+                    <p class="position" data-i18n="rank">Admin, Moderatör</p>
                     <div class="social-links">
                         <a href="https://github.com/Kairas5361"><i class="fab fa-github"></i></a>
                         <a href="https://reddit.com/u/Kairas5361"><i class="fab fa-reddit"></i></a>
