--- a/public/about.html
+++ b/public/about.html
@@ -6,8 +6,8 @@
     <title>Not Found So Far | Hakkında</title>
     <meta name="description" content="Kayıp medya arşivi hakkında bilgiler">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="about/styles.css">
 </head>
 <body>
     <header>
