--- a/public/about.html
+++ b/public/about.html
@@ -168,7 +168,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/about.js"></script>
+    <script src="script.js"></script>
+    <script src="about/script.js"></script>
 </body>
 </html>
