--- a/public/about.html
+++ b/public/about.html
@@ -18,10 +18,10 @@
             </div>
             <nav>
                 <ul>
-                    <li><a data-i18n='home' href='index.html'><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
-                    <li><a data-i18n='categories' href='categories.html'><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
-                    <li><a data-i18n='submit' href='submit.html'><i class="fas fa-upload"></i> <span>Gönderi Yap</span></a></li>
-                    <li><a class='active' href="about.html" data-i18n='about'><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
+                    <li><a data-i18n="home" href='index.html'><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
+                    <li><a data-i18n="categories" href='categories.html'><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
+                    <li><a data-i18n="submit" href='submit.html'><i class="fas fa-upload"></i> <span>Gönderi Yap</span></a></li>
+                    <li><a class='active' href="about.html" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
                 </ul>
             </nav>
             <div class="header-right">
@@ -44,8 +44,8 @@
 
     <div class="hero">
         <div class="container">
-            <h2 id="hero-title">Hakkımızda</h2>
-            <p id="hero-subtitle">Kayıp medya kültürünü koruma misyonumuz</p>
+            <h2 id="hero-title" data-i18n="hero-title">Hakkımızda</h2>
+            <p id="hero-subtitle" data-i18n="hero-subtitle">Kayıp medya kültürünü koruma misyonumuz</p>
         </div>
     </div>
 
@@ -167,8 +167,5 @@
             </div>
         </div>
     </footer>
-
-    <script src="script.js"></script>
-    <script src="about/script.js"></script>
 </body>
 </html>
