--- a/public/about.html
+++ b/public/about.html
@@ -167,6 +167,6 @@
             </div>
         </div>
     </footer>
-    <link rel="stylesheet" href="about/script.js">
+    <script src="about/script.js"></script>
 </body>
 </html>
