--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="about/styles.css">
+    <style>
+        /* Navbar simgeleri için ek stil */
+        nav ul li a {
+            display: flex !important;
+            align-items: center !important;
+            gap: 8px !important;
+            padding: 10px 15px !important;
+        }
+        nav ul li a i {
+            font-size: 1.1rem !important;
+            width: 20px !important;
+            text-align: center !important;
+        }
+        nav ul li a span {
+            display: inline-block !important;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -84,7 +101,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="https://i.hizliresim.com/gjyxp6i.jpg" alt="Arşiv Ekibimiz" data-i18n="team-image-alt">
+                    <img src="https://i.hizliresim.com/gjyxp6i.jpg" alt="Arşiv Ekibimiz">
                     <div class="image-caption" data-i18n="team-caption">2023 Yılı Ekibimiz</div>
                 </div>
             </div>
@@ -167,6 +184,6 @@
             </div>
         </div>
     </footer>
-    <script src="about/script.js"></script>
+    <script></script>
 </body>
 </html>
