--- a/public/about.html
+++ b/public/about.html
@@ -184,6 +184,6 @@
             </div>
         </div>
     </footer>
-    <script></script>
+    <script src="about/script.js"></script>
 </body>
 </html>
