--- a/public/about.html
+++ b/public/about.html
@@ -399,6 +399,6 @@
             </div>
         </div>
     </footer>
-    <script></script>
+    <script src="script.js"></script>
 </body>
 </html>
