--- a/public/about.html
+++ b/public/about.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/Not Found So Far Icon.png">
     <meta name="description" content="Kayıp medya arşivi hakkında bilgiler">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="about/styles.css">
     <style>
         /* Navbar simgeleri için ek stil */
