--- a/public/about.html
+++ b/public/about.html
@@ -420,10 +420,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="nav-link" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
-                    <li><a href="categories.html" class="nav-link" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
-                    <li><a href="submit.html" class="nav-link" data-i18n="submit"><i class="fas fa-upload"></i> <span>Gönderi Yap</span></a></li>
-                    <li><a href="about.html" class="nav-link active" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
+                    <li><a href="index.html" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
+                    <li><a href="categories.html" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
+                    <li><a href="about.html" class="active" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
                 </ul>
             </nav>
             <div class="header-right">
