--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Found So Far | Hakkında</title>
-    <link rel="icon" href="images/Not Found So Far Icon.png">
     <meta name="description" content="Kayıp medya arşivi hakkında bilgiler">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -67,12 +66,14 @@
         .logo {
             flex: 1;
             min-width: 200px;
+            display: flex;
+            flex-direction: column;
         }
 
         .logo h1 {
             font-size: 1.8rem;
             color: var(--text-color);
-            margin-bottom: 5px;
+            margin: 0;
             display: flex;
             align-items: center;
             gap: 10px;
@@ -86,6 +87,8 @@
             font-size: 0.9rem;
             color: var(--text-color);
             opacity: 0.8;
+            margin: 5px 0 0 0;
+            line-height: 1.2;
         }
 
         nav {
@@ -101,6 +104,11 @@
             gap: 15px;
             margin: 0;
             padding: 0;
+            align-items: center;
+        }
+
+        nav ul li {
+            margin: 0;
         }
 
         nav ul li a {
@@ -110,9 +118,15 @@
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
-            gap: 5px;
+            gap: 8px;
             text-decoration: underline;
             text-decoration-color: transparent;
+        }
+
+        nav ul li a i {
+            font-size: 1.1rem;
+            width: 20px;
+            text-align: center;
         }
 
         nav ul li a:hover, 
@@ -407,6 +421,11 @@
                 order: -1;
                 margin-bottom: 30px;
             }
+            
+            nav ul {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
         }
     </style>
 </head>
@@ -415,14 +434,15 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1><i class="fas fa-film"></i>Not Found <span id="site-title">So Far</span></h1>
-                <p id="site-subtitle">Kaybolan, Unutulan ve Nadir Medya İçeriklerinin Arşivi..</p>
+                <h1><i class="fas fa-film"></i>Not Found <span>So Far</span></h1>
+                <p>Kaybolan, Unutulan ve Nadir Medya İçeriklerinin Arşivi..</p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
-                    <li><a href="categories.html" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
-                    <li><a href="about.html" class="active" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
+                    <li><a href="index.html" class="nav-link" data-i18n="home"><i class="fas fa-home"></i> <span>Ana Sayfa</span></a></li>
+                    <li><a href="categories.html" class="nav-link" data-i18n="categories"><i class="fas fa-list"></i> <span>Kategoriler</span></a></li>
+                    <li><a href="submit.html" class="nav-link" data-i18n="submit"><i class="fas fa-upload"></i> <span>Gönderi Yap</span></a></li>
+                    <li><a href="about.html" class="nav-link active" data-i18n="about"><i class="fas fa-info-circle"></i> <span>Hakkında</span></a></li>
                 </ul>
             </nav>
             <div class="header-right">
@@ -664,7 +684,13 @@
             document.querySelectorAll('[data-i18n]').forEach(el => {
                 const key = el.getAttribute('data-i18n');
                 if (translations[lang][key]) {
-                    el.textContent = translations[lang][key];
+                    // Eğer span içinde metin varsa onu güncelle
+                    const span = el.querySelector('span');
+                    if (span) {
+                        span.textContent = translations[lang][key];
+                    } else {
+                        el.textContent = translations[lang][key];
+                    }
                 }
             });
             
