--- a/public/about.html
+++ b/public/about.html
@@ -510,6 +510,57 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Kişi 2 -->
+                    <div class="team-card">
+                        <img src="images/Kairas Dude.png" alt="Kairas Dude">
+                        <div class="team-info">
+                            <h3>Kaira</h3>
+                            <p class="team-role" data-i18n="role-founder">Kurucu & Arşiv Yöneticisi</p>
+                            <p data-i18n="bahadir-desc">Medya arkeolojisi uzmanı ve projenin kurucu ortağı. 10 yılı aşkın süredir kayıp medya peşinde.</p>
+                            <div class="team-social">
+                                <a href="#"><i title="Github" class="fab fa-github"></i></a>
+                                <a href="#"><i title="Twitter" class="fab fa-twitter"></i></a>
+                                <a href="#"><i title="Reddit" vclass="fab fa-reddit"></i></a>
+                                <a href="#"><i title="Steam" class="fab fa-steam"></i></a>
+                                <a href="#"><i title="Guns.lol" class="fab fa-gun"></i></a>
+                                <a href="#"><i title="Itch.io" class="fab fa-itch"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Kişi 3 -->
+                    <div class="team-card">
+                        <img src="images/Kairas Dude.png" alt="Kairas Dude">
+                        <div class="team-info">
+                            <h3>Kairas5361</h3>
+                            <p class="team-role" data-i18n="role-founder">Kurucu & Arşiv Yöneticisi</p>
+                            <p data-i18n="bahadir-desc">Medya arkeolojisi uzmanı ve projenin kurucu ortağı. 10 yılı aşkın süredir kayıp medya peşinde.</p>
+                            <div class="team-social">
+                                <a href="#"><i title="Github" class="fab fa-github"></i></a>
+                                <a href="#"><i title="Twitter" class="fab fa-twitter"></i></a>
+                                <a href="#"><i title="Reddit" vclass="fab fa-reddit"></i></a>
+                                <a href="#"><i title="Steam" class="fab fa-steam"></i></a>
+                                <a href="#"><i title="Guns.lol" class="fab fa-gun"></i></a>
+                                <a href="#"><i title="Itch.io" class="fab fa-itch"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Kişi 4 -->
+                    <div class="team-card">
+                        <img src="images/Kairas Dude.png" alt="Kairas Dude">
+                        <div class="team-info">
+                            <h3>Kairas1907</h3>
+                            <p class="team-role" data-i18n="role-founder">Kurucu & Arşiv Yöneticisi</p>
+                            <p data-i18n="bahadir-desc">Medya arkeolojisi uzmanı ve projenin kurucu ortağı. 10 yılı aşkın süredir kayıp medya peşinde.</p>
+                            <div class="team-social">
+                                <a href="#"><i title="Github" class="fab fa-github"></i></a>
+                                <a href="#"><i title="Twitter" class="fab fa-twitter"></i></a>
+                                <a href="#"><i title="Reddit" vclass="fab fa-reddit"></i></a>
+                                <a href="#"><i title="Steam" class="fab fa-steam"></i></a>
+                                <a href="#"><i title="Guns.lol" class="fab fa-gun"></i></a>
+                                <a href="#"><i title="Itch.io" class="fab fa-itch"></i></a>
+                            </div>
+                        </div>
+                    </div>
                     
             
             <div class="faq-section">
