--- a/public/about.html
+++ b/public/about.html
@@ -501,12 +501,12 @@
                             <p class="team-role" data-i18n="role-founder">Kurucu & Arşiv Yöneticisi</p>
                             <p data-i18n="bahadir-desc">Medya arkeolojisi uzmanı ve projenin kurucu ortağı. 10 yılı aşkın süredir kayıp medya peşinde.</p>
                             <div class="team-social">
-                                <a href="#"><i title="Github" class="fab fa-github"></i></a>
-                                <a href="#"><i title="Twitter" class="fab fa-twitter"></i></a>
-                                <a href="#"><i title="Reddit" vclass="fab fa-reddit"></i></a>
-                                <a href="#"><i title="Steam" class="fab fa-steam"></i></a>
-                                <a href="#"><i title="Guns.lol" class="fab fa-gun"></i></a>
-                                <a href="#"><i title="Itch.io" class="fab fa-itch"></i></a>
+                                <a href="https://github.com/Kairas5361/"><i title="Github" class="fab fa-github"></i></a>
+                                <a href="https://x.com/Kairas5361"><i title="Twitter" class="fab fa-twitter"></i></a>
+                                <a href="https://reddit/u/Kairas5361"><i title="Reddit" class="fab fa-reddit"></i></a>
+                                <a href="https://steamcommunity.com/profiles/76561199179702467/"><i title="Steam" class="fab fa-steam"></i></a>
+                                <a href="https://guns.lol/kairas"><i title="Guns.lol" class="fa-solid fa-gun fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i></a>
+                                <a href="https://kairas5361.itch.io"><i title="Itch.io" class="fab fa-itch-io"></i></a>
                             </div>
                         </div>
                     </div>
