--- a/public/about.html
+++ b/public/about.html
@@ -503,7 +503,7 @@
                             <div class="team-social">
                                 <a href="https://github.com/Kairas5361/"><i title="Github" class="fab fa-github"></i></a>
                                 <a href="https://x.com/Kairas5361"><i title="Twitter" class="fab fa-twitter"></i></a>
-                                <a href="https://reddit/u/Kairas5361"><i title="Reddit" class="fab fa-reddit"></i></a>
+                                <a href="https://reddit.com/u/Kairas5361"><i title="Reddit" class="fab fa-reddit"></i></a>
                                 <a href="https://steamcommunity.com/profiles/76561199179702467/"><i title="Steam" class="fab fa-steam"></i></a>
                                 <a href="https://guns.lol/kairas"><i title="Guns.lol" class="fa-solid fa-gun fa-rotate-by" style="--fa-rotate-angle: -30deg;"></i></a>
                                 <a href="https://kairas5361.itch.io"><i title="Itch.io" class="fab fa-itch-io"></i></a>
@@ -614,12 +614,12 @@
                 "hero-title": "Hakkımızda",
                 "hero-subtitle": "Kayıp medya kültürünü koruma misyonumuz",
                 "who-we-are": "Biz Kimiz?",
-                "about-text-1": "Not Found So Far, 2023 yılında medya arkeolojisine gönül veren bir ekip tarafından kuruldu. Amacımız, unutulmaya yüz tutmuş veya tamamen kaybolmuş medya içeriklerini belgelemek ve bu kültürel mirası gelecek nesillere aktarmak.",
+                "about-text-1": "Not Found So Far, 2025 yılında medya arkeolojisine gönül veren bir ekip tarafından kuruldu. Amacımız, unutulmaya yüz tutmuş veya tamamen kaybolmuş medya içeriklerini belgelemek ve bu kültürel mirası gelecek nesillere aktarmak.",
                 "our-mission": "Misyonumuz",
                 "about-text-2": "Kayıp medya avcıları, araştırmacılar ve meraklılar için güvenilir bir arşiv oluşturuyoruz. Her bir parçanın kültürel değerini korurken, etik ve yasal sınırlar içinde bu içerikleri erişilebilir kılıyoruz.",
                 "our-team": "Ekibimiz",
                 "team-2023": "2023 Ekibimiz",
-                "team-desc": "Not Found So Far'i mümkün kılan değerli ekip üyelerimiz:",
+                "team-desc": "Not Found So Far'i Mümkün Kılan Değerli Ekip Üyelerimiz:",
                 "role-founder": "Kurucu & Arşiv Yöneticisi",
                 "bahadir-desc": "Kurucu, Yönetici ve Moderatör.",
                 "role-tech": "Teknoloji Lideri",
@@ -656,7 +656,7 @@
                 "about-text-2": "We are building a reliable archive for lost media hunters, researchers and enthusiasts. While preserving the cultural value of each piece, we make this content accessible within ethical and legal boundaries.",
                 "our-team": "Our Team",
                 "team-2023": "Our Team 2023",
-                "team-desc": "The valuable team members who make Not Found So Far possible:",
+                "team-desc": "The Valuable Team Members Who Make Not Found So Far Possible:",
                 "role-founder": "Founder & Archive Manager",
                 "bahadir-desc": "Founder, Admin and Moderator.",
                 "role-tech": "Technology Lead",
